prodMetadata/src/objects/FAQ__c.object
<CustomObject>
    <description>Frequently asked questions</description>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>This determines the section the FAQ appears in.</description>
        <inlineHelpText>This determines the section the FAQ appears in.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>How Rewards Work</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Modifying a Reward Request</fullName>
                </value>
                <value>
                    <fullName>Questions About IAVA Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sort_order__c</fullName>
        <description>This number decides the order in which the FAQs on the site rank relative to one another.</description>
        <inlineHelpText>This number decides the order in which the FAQs on the site rank relative to one another.</inlineHelpText>
        <label>Sort order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FAQ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Sort_order__c</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>FAQ Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>